--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body button:hover {
   background-color: gray;
 }
 
-@media screen and (max-width: 710) {
+@media screen and (max-width: 710px) {
   body button {
     transform: translateY(50%);
   }
