--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body button:hover {
 @media screen and (max-width: 710px) {
   body button {
     transform: translateY(50%);
+    font-size: 1em;
   }
   body h1 {
     font-size: 1em;
