--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body button:hover {
 }
 @media screen and (max-width: 470px){
   body h1{
-    font-size: 20px;
+    font-size: 5px;
+    font-weight: 100;
   }
 }
