--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body h1 {
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  font-size: 5em;
+  /*font-size: 5em;*/
 }
 body form {
   display: flex;
